edit gradient color on main page background/ corrected spacing for mobile view/made project part mobile responsive

--- a/public/main.css
+++ b/public/main.css
@@ -10,7 +10,7 @@ body {
   font-size: 16px;
   color: #ffffff;
   line-height: 1.5em;
-  
+  /* width: calc(100% + 22px); */
 }
 
 a {
@@ -22,7 +22,6 @@ a {
 }
 
 .app button {
-  padding: 16px;
   font: inherit;
   color: white;
   cursor: pointer;
@@ -32,59 +31,11 @@ a {
   color: black;
 }
 
-.projects {
-display: flex;
-flex-wrap: nowrap;
-padding: 55px 50px 25px 50px;
-background-color: #333333;
-height: 450px;
-}
-
-.aboutMe {
-  display: flex;
-  background-color: #ffffff;
-  color: #666666;
-  line-height: 1.5em;
-  font-size: 1.5em;
-  font-weight: normal;
-  box-sizing: border-box;
-  flex-direction: column;
-  align-items: center;
-  padding: 50px;
-  font-family: 'Raleway', sans-serif;
-}
-
-.aboutMe p {
-  margin-top: 30px;
-  max-width: 650px;
-}
-
-@media (max-width: 499px) {
-  .aboutMe p {
-    max-width: 350px;
-    text-align: justify;
-    font-size: 20px;
-    line-height: 30px;
-    margin: 0;
-  }
-
-  .aboutMe h1 {
-    font-size: 25px;
-    font-weight: bold;
-    margin: 0;
-    padding-bottom: 10px;
-  }
-  .aboutMe {
-    padding: 30px 0 30px 0;
-  }
-
-}
-
 .introPageContainer {
   height: 100vh;
   background-image: linear-gradient(
     rgba(20, 20, 20, 0.365), 
-    rgba(20,20,20, .7)), url("./images/background.JPG");
+    rgba(55, 38, 85, 0.7)), url("./images/background.JPG");
   opacity: 1;
   background-position: center;
   background-repeat: no-repeat;
@@ -117,16 +68,20 @@ height: 450px;
     justify-content: space-evenly;
   }
   .introLine {
-    max-width: 350px;
+    max-width: calc(100%);
     align-self: left;
     flex-grow: 0.2;
+    padding-top: 20px;
+  }
+  .introLine h1 {
+    font-size: 30px;
+    padding-top: 15px;
   }
   .introLine p {
     font-weight: 20;
     font-size: 23px;
-  }
-  .introLine h1 {
-    font-size: 30px;
+    padding-top: 25px;
+
   }
   .profileImg {
     height: 150px;
@@ -136,9 +91,96 @@ height: 450px;
   }
 }
 
-@media (min-width: 500px) {
+@media (min-width: 499px) {
   div>img.profileImg{
     display: none;
+  }
+}
+
+.aboutMe {
+  display: flex;
+  background-color: #ffffff;
+  color: #666666;
+  line-height: 1.5em;
+  font-size: 1.5em;
+  font-weight: normal;
+  box-sizing: border-box;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px;
+  font-family: 'Raleway', sans-serif;
+}
+
+.aboutMe p {
+  margin-top: 30px;
+  max-width: 650px;
+}
+
+@media (max-width: 499px) {
+  .aboutMe p {
+    max-width: 350px;
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0;
+    padding-top: 20px;
+    text-align: justify;
+  }
+
+  .aboutMe h1 {
+    font-size: 25px;
+    font-weight: bold;
+    margin: 0;
+    /* padding-bottom: 10px; */
+  }
+  .aboutMe {
+    padding: 30px 0 30px 0;
+  }
+
+}
+
+.projects {
+  display: flex;
+  /* flex-wrap: nowrap; */
+  padding: 55px 50px 25px 50px;
+  background-color:#2d143d;
+  height: 450px;
+  justify-content: space-evenly;
+}
+
+.projectContainer {
+  display: flex;
+  width: 320px;
+  height: 320px;
+  justify-content: space-evenly;
+
+}
+
+.cardContainer {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  color: #666666;
+  border-radius: 5px;
+  background-color: #ffffff;
+}
+.cardContainer p {  
+  padding-top: 15px; 
+}
+
+.cardContainer img{
+  width: 100%;
+  height: 60%;
+}
+
+@media (max-width: 499px) {
+  .cardContainer {
+    width: 300px;
+    height: 300px;
+    flex-direction: baseline;
+  }
+  .projects {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    overflow: scroll;
   }
 }
 
